--- a/build.gradle
+++ b/build.gradle
@@ -15,13 +15,26 @@ repositories {
     mavenCentral()
 }
 
+sourceSets {
+    main {
+        java {
+            srcDir 'src'
+        }
+//        resources {
+//            srcDir 'src/resources'
+//        }
+    }
+}
+
 configurations.compile {
     resolutionStrategy.cacheChangingModulesFor 0, "seconds"
 }
 
 dependencies {
-    // junit testing
-    testCompile "junit:junit:4.11"
+	//compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
+    //testCompile group: 'junit', name: 'junit', version: '4.+'
+    
+    compile "junit:junit:4.11", 'net.arnx:jsonic:1.3.8'
 }
 
 /** Function always returns a new manifest that can be customized */
@@ -39,11 +52,13 @@ jar {
     manifest = defaultManifest()
 }
 
-task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
-    from 'build/docs/javadoc'
-    manifest = defaultManifest()
-}
+
+//task javadocJar(type: Jar, dependsOn: javadoc) {
+//    classifier = 'javadoc'
+//    from 'build/docs/javadoc'
+//    manifest = defaultManifest()
+//}
+
 
 task sourcesJar(type: Jar) {
     classifier = 'sources'
@@ -53,7 +68,7 @@ task sourcesJar(type: Jar) {
 
 artifacts {
     archives jar
-    archives javadocJar
+    //archives javadocJar
     archives sourcesJar
 }
 
