--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,18 @@ configurations.compile {
     resolutionStrategy.cacheChangingModulesFor 0, "seconds"
 }
 
+//publishing {
+//    publications {
+//        maven(MavenPublication) {
+//            groupId 'com.adobe.yaozhang'
+//            artifactId 'language-detection'
+//            version '1.0.1'
+//
+//            from components.java
+//        }
+//    }
+//}
+
 dependencies {
 	//compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
     //testCompile group: 'junit', name: 'junit', version: '4.+'
@@ -84,6 +96,10 @@ uploadArchives {
                 }
 
                 pom.project {
+                    groupId 'com.adobe.yaozhang'
+                    artifactId 'language-detection'
+                    version '1.0.1'
+
                     name 'langdetect'
                     description "This is the deployed version of Shuyo Language Detector."
                     url 'https://github.com/shuyo/language-detection'
